[gd_scene load_steps=2 format=2]

[ext_resource path="res://interface/confirmation_box/confirmation_box_panel.gd" type="Script" id=3]

[node name="ConfirmationBox" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.5
margin_top = -91.0
margin_right = 28.5
margin_bottom = 30.0
rect_min_size = Vector2( 100, 50 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 108.0
margin_bottom = 114.0
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 4.0
margin_right = 94.0
margin_bottom = 104.0
custom_constants/separation = 12
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 12.0
margin_right = 86.0
margin_bottom = 25.0
text = "Confirm"
align = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 37.0
margin_right = 86.0
margin_bottom = 50.0
text = "Description:"
autowrap = true

[node name="VerticalButtonContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 50.0
margin_right = 74.0
margin_bottom = 102.0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VerticalButtonContainer"]
margin_right = 74.0
margin_bottom = 24.0
text = "Test"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/VerticalButtonContainer"]
margin_top = 28.0
margin_right = 74.0
margin_bottom = 52.0
text = "Test2"

[node name="HorizontalButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 62.0
margin_right = 86.0
margin_bottom = 88.0
custom_constants/separation = 8
alignment = 1

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/HorizontalButtonContainer"]
margin_right = 36.0
margin_bottom = 26.0
text = "Test"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/HorizontalButtonContainer"]
margin_left = 44.0
margin_right = 86.0
margin_bottom = 26.0
text = "Test2"
